<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textAutoComplete"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/inputCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/inputQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number"
        android:importantForAutofill="no" />

</LinearLayout>