<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/loginActivityAppTitle"
        android:textAlignment="center"
        android:layout_marginBottom="200dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginActivitySignInMessage"
        android:textAlignment="center"
        android:paddingBottom="20dp"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/anonymousSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorLightGrey"
        android:gravity="bottom"
        android:text="@string/anonymous_sign_in_button" />

</LinearLayout>